Fix spacing on admin dashboard page

--- a/services/QuillLMS/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/admin_dashboard/admin-dashboard.scss
@@ -281,6 +281,7 @@
             border: 1px solid #C0C0C0;
             border-radius: 8px;
             padding: 16px;
+            margin-bottom: 8px;
             img {
               width: 21px;
               height: auto;
